--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Virtual Keyboard</title>
         <link rel="shortcut icon" href="#">
-    </head>
+    <script defer src="main.js"></script><link href="main.css" rel="stylesheet"></head>
     <body>
 
     </body>
